--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script src="js/lib/zingtouch-1.0.0.min.js"></script>
     <!---->
 
-    <!-- Main JavaScript -->
+    <!-- Custom JavaScript -->
     <script src="js/main.js"></script>
     <!---->
 </body>
